splash screen and updated theme

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <div style="margin-left: 40%; margin-top: 20%">
+      <img src="./assets/icons/icon-512x512.png" style="width: 30%">
+    </div>
+    <div style="margin-left: 40%;"><h1>Lodaing...</h1></div>
+  </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
