--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </div>
     <div style="margin-left: 40%;"><h1>Lodaing...</h1></div>
   </app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>Did you really think JS text tools was going to work without Javascript enabled? Really?</noscript>
 </body>
 
 </html>
