fixed timestamp converter

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <meta name="theme-color" content="#700099">
 </head>
 
-<body>
+<body style="background: #222222">
   <app-root>
-    <div style="margin-left: 40%; margin-top: 20%">
-      <img src="./assets/icons/icon-512x512.png" style="width: 30%">
+    <div style="position: fixed; top: 40%; left: 50%; transform: translate(-50%, -50%);">
+      <img src="./assets/icons/icon-512x512.png" style="width: 200px">
+      <h2 style="color: #f8f9fa; font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;">Lodaing...</h2>
     </div>
-    <div style="margin-left: 40%;"><h1>Lodaing...</h1></div>
   </app-root>
   <noscript>Did you really think JS text tools was going to work without Javascript enabled? Really?</noscript>
 </body>
