--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body style="background: #222222">
-  <app-root>
+  <jstt-root>
     <noscript>
       <h3>JS Text Tools needs JavaScript</h3>
     </noscript>
@@ -36,7 +36,7 @@
       <img src="./assets/icons/icon-192x192.png">
       <h3>Loading...</h3>
     </div>
-  </app-root>
+  </jstt-root>
 </body>
 
 </html>
